Removed flag for image